# ChangeLog for x11-libs/pixman
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/pixman/ChangeLog,v 1.62 2010/01/19 20:26:38 armin76 Exp $

  19 Jan 2010; Raúl Porcel <armin76@gentoo.org> pixman-0.17.2.ebuild:
  s390 stable wrt #294958

  18 Jan 2010; Raúl Porcel <armin76@gentoo.org> pixman-0.17.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #294958

  16 Jan 2010; Raúl Porcel <armin76@gentoo.org> pixman-0.17.2.ebuild:
  arm stable

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> pixman-0.17.2.ebuild:
  Stable for HPPA (bug #294958).

  12 Jan 2010; Raúl Porcel <armin76@gentoo.org> pixman-0.16.2.ebuild,
  pixman-0.17.2.ebuild, +files/pixman-0.17.2-armv7.patch:
  Add patch to fix build failure on armv4 and mark 0.16.2 stable on arm

  27 Dec 2009; Joseph Jezak <josejx@gentoo.org> pixman-0.17.2.ebuild:
  Marked ppc stable for bug #294958.

  15 Dec 2009; Brent Baude <ranger@gentoo.org> pixman-0.17.2.ebuild:
  Marking pixman-0.17.2 ppc64 stable for bug 294958

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org> pixman-0.16.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #282290

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org> pixman-0.17.2.ebuild:
  x86 stable, bug 294958

  10 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> pixman-0.17.2.ebuild:
  amd64 stable wrt #294958

*pixman-0.17.2 (21 Nov 2009)

  21 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +pixman-0.17.2.ebuild:
  Version bump.

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> pixman-0.16.0.ebuild:
  Stable for HPPA (bug #282290).

  11 Oct 2009; nixnut <nixnut@gentoo.org> pixman-0.16.0.ebuild:
  ppc stable #282290

  09 Oct 2009; Markus Meier <maekke@gentoo.org> pixman-0.16.0.ebuild:
  arm stable, bug #282290

  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> pixman-0.16.0.ebuild:
  x86 stable, bug 282290

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> pixman-0.16.0.ebuild:
  amd64 stable wrt #282290
