@@ -1,16 +1,10 @@
 AUX pixman-0.12.0-sse.patch 536 RMD160 2eac636c530c1911765111766bb121b075d6b3dc SHA1 5a51a7f339faf1fd33b803442f27cca09e9eceb0 SHA256 2708f2fb856c706af9ae89570508afc1e72c05348d989ed813a3e2cc85582cf1
 AUX pixman-0.17.2-armv7.patch 698 RMD160 c88feced691854c5bca716205b9548b29855814b SHA1 5dbb6ce2cc61cdf44f5689b2c91958060ce79466 SHA256 fa73add6a6cc13bcd29ae22041c18cb13521ba12e0c9cae32c85fc40f2f42886
-DIST pixman-0.10.0.tar.bz2 312275 RMD160 16c356f5fa3dfa4c0196456552daca3ab6244276 SHA1 9262e945281877c42d484098de664dcf1a68d857 SHA256 2b841f49b245948b8739e55f1b663687d5b33eb2767833574f9a1f0904a1d1e4
-DIST pixman-0.12.0.tar.bz2 364262 RMD160 7881189a1de21ec5d2e27936c65369f121dcb15f SHA1 0c57c6c7e21e2545257068f52517c460e6e51ae4 SHA256 a82b54382a82c2fb42f7ad2c8f363e945602a5183f6df685b69a584d3b25b228
-DIST pixman-0.14.0.tar.bz2 352625 RMD160 b3a8124ffd04096a87ae8e4e044de68a3a0aad36 SHA1 495e9de7b113365d0b7fe902f846734dfe2e1546 SHA256 eb6d14a582cd5055c52e8278641984c17945a8693733214a5d5a10b4f849ca4d
 DIST pixman-0.16.0.tar.bz2 402602 RMD160 436bca0dc3bec542da59db2a226e5217cdadd8f1 SHA1 7cf1f2261ba44b3c98cf3d2a32e9fd90b12ca19e SHA256 d1808fda5f4b3feb867cfb5a1a3311a713d21ce866eb38e9096841f7e241551d
-DIST pixman-0.16.2.tar.bz2 402761 RMD160 4d100ecc48fdf82923e141b674ea77eae9a58448 SHA1 387ec30d236a52bc21a45f2d50adad7fca89b667 SHA256 80b2fa3392e97c257ea251f99f827cc0f3dda06b876c27a0fcb54b971c296760
 DIST pixman-0.17.2.tar.bz2 399934 RMD160 56d9ef3c80af6fd91f247314cb9bb9d8bb8a65f0 SHA1 da17421f46b323af25906bb906cccd62f34799f6 SHA256 4adcf2f85de51ca02610c12d8ae335b4913f3c7962238713f0c9491e2830a998
-EBUILD pixman-0.10.0.ebuild 517 RMD160 bca4c626aa037cc0bf7ea5863f2d95d6bf1bee71 SHA1 f92173575c23b39c171a21a165eac5f4b47c62af SHA256 5de92c6bbe3956d5df47ca5df843fc37ba18867d3faea42fbf27d5a6e152fb8b
-EBUILD pixman-0.12.0.ebuild 1347 RMD160 e7af6c1fe6c27119b01e87f73821746847055a18 SHA1 036baad7d4d32dfebd56bc0b840a9428a4e84ea7 SHA256 ac7e88d6eceace8a5622352d09ff183d93751e4f9d4748454f47e2e8b3019bd0
-EBUILD pixman-0.14.0-r1.ebuild 1757 RMD160 e48db4445e4d530a523b8fca7e362901b37e88c1 SHA1 37e1a4675ccbb98dd1b085a1520cb1c39a819097 SHA256 2d056fa679ba9f404580728e8608ae081d3e6be7a4df0eb9390f6576a39e1fc2
+DIST pixman-0.17.4.tar.bz2 405683 RMD160 218c3641a599489e5d8ccdcc1911a311fd19d6f8 SHA1 85cfa05cc4ec2f4f09747c69903a2da52c344775 SHA256 c2251899271150c45eb310ddae7f16fc0b920724ad0e2d56d75654e663e796cb
 EBUILD pixman-0.16.0.ebuild 1778 RMD160 7fab89d05644b5264fd3544cd42ef428fba6c8b1 SHA1 0b88d3a43367ed0dbaf4ed293196f8559430905d SHA256 973c4b7e896ddedf1b8d0ea79266eebc2129774565539c212c1116b8e4c31dfe
-EBUILD pixman-0.16.2.ebuild 1711 RMD160 f32f29e4a9fe8510f6365342b19328cef18eed26 SHA1 5a940c60e927009f03434e175ea158d42208563c SHA256 9d6e87056c865094a58a0e79788a5b91e4c1dec91e143e5b7e615b070a7476d5
 EBUILD pixman-0.17.2.ebuild 1823 RMD160 2b0848d5003e71b73ea8e42d41d9972e19d8401c SHA1 2eabfdf33fcc0843ba28a6bba979d204593b4de5 SHA256 ac73c4d955e555da610eb70cb5adc7c77e04ca9aa98e60dc7610af845b5c0edf
-MISC ChangeLog 8944 RMD160 eda8476905f77057b68e69eb2f6a0e6aaa7d39cc SHA1 5f4a41d49c98c3cf4e29a45089d8ad1405cdf9d6 SHA256 e3674e8b99f4a2c83cd83fa56ff7daebe0062b90f983dff2c437e4f637ab02d1
+EBUILD pixman-0.17.4.ebuild 1713 RMD160 5a5c1b76465447e43fa388fa53c430e85bc724a1 SHA1 7d3272446a4322904815173c85beb997fd979e86 SHA256 9c92122ae311a64d348e6e56479da0e4691d70824190788c3ccbd52c30f7c742
+MISC ChangeLog 9267 RMD160 091ed0ba524f47bc55ffe28ebb810b1576f1e2dc SHA1 f1c6769b771fbaf453b17d879b1399e5ef47daab SHA256 1ebce9dbf0bd77c631c9d1cc2247c7bb52c73e5e1e3f5157434cba0fbf5fd933
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
